# PlatformGame

./: README.md
Platform_Game/: CMakeLists.txt
Platform_Game/gamelib/: CMakeLists.txt  camera.cpp  camera.h  game_object.cpp  game_object.h  screen.cpp  screen.h  sprite.cpp  sprite.h
Platform_Game/resources/: Level1.FMP  images.qrc  teste.FMP
Platform_Game/src/: CMakeLists.txt  game_app.cpp  game_app.h  main.cpp
